Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -57,10 +57,7 @@ main {
     flex-direction: column;
     align-items: center;
     font-size: 2rem;
-}
-
-.eightball p {
-    margin: 3rem;
+    gap: 3rem;
 }
 
 .eightball button {
